--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
-    <title>Kinco - Kindergarten HTML Template</title>
+    <title>Kinboy - Kindergarten </title>
 
     <meta name="author" content="themesflat.com">
 
@@ -906,7 +906,7 @@
                             </div>
                             <div class="col-12">
                                 <div class="footer-bottom jus-ct">
-                                    <p class="copy-right">Copyright © 2022, Kinco - Kindergarten HTML Template. Designed by <a href="https://themeforest.net/user/themesflat/portfolio">Themesflat</a></p>
+                                    <p class="copy-right">Copyright © 2022, Kinboy - Kindergarten HTML Template. Designed by <a href="#">Themesflat</a></p>
                                 </div>
                             </div>
                         </div>
